--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -134,6 +134,7 @@
   "validation.error.http.480": "UVCI già bloccato",
   "validation.error.http.482": "Il CSV non è stato elaborato a causa di una dimensione non valida. Deve contenere da 1 a 100 voci.",
   "validation.error.http.485": "Una o più delle query CSV contiene dati non validi. Per messaggi di errore più dettagliati, controlla il file CSV restituito.",
+  "validation.error.http.489": "Data di nascita non valida. Si prega di controllare i dati inseriti nella fase due.",
   "notifications.unsupportedBrowser.title": "Browser non supportato",
   "notifications.unsupportedBrowser.message": "Il browser non è compatibile con alcune funzioni dell'applicazione. Tali funzioni sono supportate soltanto nelle due versioni più recenti di Chrome, Firefox, Edge e Safari."
 }
