--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -42,7 +42,7 @@
   "certificateCreate.step-one.enum.recovery": "Genesen (Positiver Test)",
   "certificateCreate.step-two.personaldata.information": "Die Personalien müssen mit dem Ausweisdokument identisch sein.",
   "certificateCreate.step-two.vaccinationinformation": "Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3",
-  "certificateCreate.step-two.nonissuablevaccineproductinformation": "<PLACEHOLDER-de>",
+  "certificateCreate.step-two.nonissuablevaccineproductinformation": "Die Ausstellung eines Covid-Impfzertifikats für den ausgewählten Impfstoff ist ausschliesslich Ausstellerinnen und Ausstellern mit \"weitergehenden Rechten\" vorbehalten, wie sie vom Kanton oder vom Oberfeldarzt bezeichnet wurden. Wenn Sie nicht zu dieser Gruppe von Ausstelllenden gehören, brechen Sie bitte die Ausstellung ab.",
   "certificateCreate.step-three.title": "Zertifikatvorschau",
   "certificateCreate.step-three.description": "Bitte überprüfen Sie die eingegebenen Daten vor der Generierung des Zertifikats",
   "certificateCreate.step-three.dose": "Dosis",
