--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -42,7 +42,7 @@
   "certificateCreate.step-one.enum.recovery": "Guérison (test positif)",
   "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
   "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
-  "certificateCreate.step-two.nonissuablevaccineproductinformation": "<PLACEHOLDER-fr>",
+  "certificateCreate.step-two.nonissuablevaccineproductinformation": "L'émission d'un certificat de vaccination COVID-19 pour le vaccin sélectionné est réservée exclusivement aux émetteurs ayant des \"droits avancés\" tels que désignés par le canton ou le médecin cantonal. Si cela ne vous concerne pas, veuillez annuler la procédure.",
   "certificateCreate.step-three.title": "Aperçu du certificat",
   "certificateCreate.step-three.description": "Merci de vérifier l'exactitude des données saisies avant la génération du certificat.",
   "certificateCreate.step-three.dose": "Dose",
