--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -110,6 +110,7 @@
   "i18n.validation.timeAfterToday": "The date cannot be in the future",
   "i18n.validation.matDatepickerParse": "Invalid date format. Please use \"dd.mm.yyyy hh:mm\"",
   "i18n.validation.invalidShortDate": "Invalid date format. Please use \"jjjj\" or \"jjjj-mm\"",
+  "i18n.validation.notIssuableInSwitzerland": "This vaccine is not authorized in Switzerland.",
   "logout": "Logout",
   "otp.button.copy": "Copy to the clipboard",
   "otp.button.create": "Generate private key",
