--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -110,6 +110,7 @@
   "i18n.validation.timeAfterToday": "La date ne doit pas être située dans le futur",
   "i18n.validation.matDatepickerParse": "Format de date invalide, merci d'utiliser \"jj.mm.aaaa hh:mm\"",
   "i18n.validation.invalidShortDate": "Format de date invalide, merci d'utiliser \"jjjj\" ou \"jjjj-mm\"",
+  "i18n.validation.notIssuableInSwitzerland": "Ce vaccin n'est pas autorisé en Suisse.",
   "logout": "Déconnexion",
   "otp.button.copy": "Copier dans le presse-papier",
   "otp.button.create": "Créer une clé secrète",
