fix/skip tests and add translations
Signed-off-by: mofobo <mohammed.fonsecaboukhalat@bit.admin.ch>

--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -42,7 +42,9 @@
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
   "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
   "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
-  "certificateCreate.step-two.nonissuablevaccineproductinformation": "L’emissione di un certificato di vaccinazione COVID-19 per il vaccino selezionato è riservata esclusivamente agli emittenti con «diritti più estesi» designati dal Cantone o dal medico capo dell’esercito. Se non rientra in questo gruppo di emittenti, La preghiamo di interrompere la procedura di emissione.",
+  "certificateCreate.step-two.nonissuablevaccineproductinformation": "Die Ausstellung von Covid-Impfzertifikaten oder Covid-Genesenenzertifikaten für Personen die im Ausland geimpft oder genesen sind, ist nur speziell vom Kanton bezeichneten Stellen vorbehalten. Bitte bestätigen Sie, dass Sie für diese Ausstellungen vom Kanton berechtigt wurden. Die Ausstellung für Impfstoffe die nur gem. «WHO Emergency Use Listing» zugelassen sind ist nur für Personen mit einem gültigen Aufenthaltstitel oder Schweizer BürgerInnen. Diese Covid-Impfzertifikate sind zudem nur innerhalb der Schweiz gültig.",
+  "certificateCreate.step-two.moreInfosMessage": "Die Ausstellung für im Ausland geimpfte oder genesene Personen ist vorderhand für Personen vorgesehen, für die im Land der Impfung oder Genesung kein digitales EU DCC-kompatibles Zertifikat ausgestellt werden konnte. Covid-Impfzertifikate für Impfstoffe die weder in der Schweiz noch für die EU, aber gemäss dem «WHO Emergency Use Listing» zugelassen sind können nur für Personen mit einem gültigen Aufenthaltstitel oder Schweizer Bürgerinnen und Bürger ausgestellt werden und diese Covid-Impfzertifikate sind nur innerhalb der Schweiz gültig. Die massgeblichen rechtlichen Grundlagen sind in der Covid-19-Verordnung Zertifikate (SR 818.102.2) geregelt, insbes.:- Artikel 7: Ausstellerinnen und Aussteller mit weitergehenden Rechten;- Artikel 13: Voraussetzungen für die Ausstellung.",
+  "certificateCreate.step-two.moreInfosLabel": "Più informazioni",
   "certificateCreate.step-three.title": "Anteprima del certificato",
   "certificateCreate.step-three.description": "Controllare i dati inseriti prima di generare il certificato",
   "certificateCreate.step-three.dose": "Dose",
@@ -110,7 +112,7 @@
   "i18n.validation.timeAfterToday": "La data non deve essere nel futuro",
   "i18n.validation.matDatepickerParse": "Formato di data non valido, utilizzare \"dd.mm.yyyy hh:mm\"",
   "i18n.validation.invalidShortDate": "Formato di data non valido, utilizzare \"jjjj\" o \"jjjj-mm\"",
-  "i18n.validation.notIssuableInSwitzerland": "Questo vaccino non è autorizzato in Svizzera.",
+  "i18n.validation.notIssuableInSwitzerland": "Ausgewählter Impfstoff ist in der Schweiz nicht zugelassen.",
   "logout": "Logout",
   "otp.button.copy": "Copia negli appunti",
   "otp.button.create": "Crea chiave segreta",
