--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -28,6 +28,7 @@
   "certificateCreate.form.group.test.type.antigen": "Test rapide antigénique",
   "certificateCreate.form.group.recovery": "Guérison",
   "certificateCreate.shipping.app.code": "Code d'envoi",
+  "certificateCreate.shipping.app.code.info": "Note that the following characters are left out to reduce confusion: \"G, I, J, L, O, Q, V\"",
   "certificateCreate.shipping.options": "Sélectionnez l'option d'envoi",
   "certificateCreate.shipping.options.app": "Délivrer le certificat dans l'application",
   "certificateCreate.shipping.options.pdf": "Délivrer le certificat en format PDF",
