--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -28,6 +28,7 @@
   "certificateCreate.form.group.test.type.antigen": "Test antigenico rapido",
   "certificateCreate.form.group.recovery": "Guarigione",
   "certificateCreate.shipping.app.code": "Codice di spedizione",
+  "certificateCreate.shipping.app.code.info": "Note that the following characters are left out to reduce confusion: \"G, I, J, L, O, Q, V\"",
   "certificateCreate.shipping.options": "Selezionare l'opzione di invio",
   "certificateCreate.shipping.options.app": "Rilasciare il certificato nell'applicazione",
   "certificateCreate.shipping.options.pdf": "Rilasciare il certificato in formato PDF",
