--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -50,7 +50,7 @@
   "certificateCreate.step-three.description": "Bitte überprüfen Sie die eingegebenen Daten vor der Generierung des Zertifikats",
   "certificateCreate.step-three.dose": "Dosis",
   "certificateCreate.step-three.validFrom": "Gültig von",
-  "certificateCreate.step-three.validUntil": "Gültig bis",
+  "certificateCreate.step-three.validUntil": "Gültig in der Schweiz bis",
   "certificateCreate.step-four.app.code.error.476": "Unbekannter oder ungültiger Zustellungscode. Das Zertifikat konnte nicht in die App geliefert werden.",
   "certificateCreate.step-four.app.code.error.558": "Technisches Problem. Das Zertifikat konnte nicht in die App geliefert werden.",
   "certificateCreate.step-four.title": "Generiertes Zertifikat",
