--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -6,6 +6,7 @@
   "certificateCreate.form.label.personalData.surName": "Cognome",
   "certificateCreate.form.label.personalData.birthdate": "Data di nascita",
   "certificateCreate.form.label.personalData.certificateLanguage": "Lingua del certificato",
+  "certificateCreate.from.label.antibody": "Test per gli anticorpi Sars-CoV-2",
   "certificateCreate.form.label.personalData.specialDate": "Formato insolito",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccino",
   "certificateCreate.form.label.vaccine.doseNumber": "Dosi ricevute",
@@ -14,7 +15,8 @@
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Paese di vaccinazione",
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
   "certificateCreate.form.label.test.manufacturerAndName": "Fabbricante e Nome",
-  "certificateCreate.form.label.test.sampleDate": "Data/ora del test",
+  "certificateCreate.form.label.test.sampleDate": "Data del test",
+  "certificateCreate.form.label.test.sampleDateTime": "Data/ora del test",
   "certificateCreate.form.label.test.sampleDate.info": "Questa è l'ora in cui il campione è stato preso.",
   "certificateCreate.form.label.test.center": "Effettuato da",
   "certificateCreate.form.label.test.center.info": "Questo è preferibilmente l'istituzione.",
@@ -41,6 +43,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
+  "certificateCreate.step-one.enum.antibody": "Test anticorpale (sieropositivo)",
   "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
   "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">Die Ausstellung von Covid-Impfzertifikaten oder Covid-Genesenenzertifikaten f&uuml;r Personen die im Ausland geimpft oder genesen sind, ist nur speziell vom Kanton bezeichneten Stellen vorbehalten. Bitte best&auml;tigen Sie, dass Sie f&uuml;r diese Ausstellungen vom Kanton berechtigt wurden.</p><p style=\"text-align: justify;\">Die Ausstellung f&uuml;r Impfstoffe die nur gem. &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; zugelassen sind ist nur f&uuml;r Personen mit einem g&uuml;ltigen Aufenthaltstitel oder Schweizer B&uuml;rgerInnen. Diese Covid-Impfzertifikate sind zudem nur innerhalb der Schweiz g&uuml;ltig.</p>",
@@ -60,6 +63,7 @@
   "certificateCreate.step-four.download": "Scarica certificato",
   "certificateCreate.step-four.generateNew": "Crea nuovo certificato",
   "certificateCreate.step-four.warning": "Il PDF contiene dati sensibili. Deve essere consegnato di persona o inviato attraverso un canale sicuro.",
+  "certificateCreate.step-four.warningChOnly": "Questo certificato è valido solo in Svizzera.",
   "certificateRevoke.button": "Blocca certificato",
   "certificateRevoke.instructions": "Qui è possibile bloccare i certificati emessi. Questi certificati appariranno in una apposita lista.",
   "certificateRevoke.link": "Blocca certificato",
