--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -7,7 +7,7 @@
   "certificateCreate.form.label.personalData.birthdate": "Date de naissance",
   "certificateCreate.form.label.personalData.specialDate": "Format inhabituel",
   "certificateCreate.form.label.personalData.certificateLanguage": "Langue du certificat",
-  "certificateCreate.from.label.antibody": "Test anticorps Sars-CoV-2",
+  "certificateCreate.from.label.antibody": "Test d'anticorps Sars-CoV-2",
   "certificateCreate.form.label.vaccine.medicalProduct": "Produit",
   "certificateCreate.form.label.vaccine.doseNumber": "Doses reçues",
   "certificateCreate.form.label.vaccine.totalDoses": "Doses requises",
@@ -63,7 +63,7 @@
   "certificateCreate.step-four.download": "Télécharger le certificat",
   "certificateCreate.step-four.generateNew": "Établir un nouveau certificat",
   "certificateCreate.step-four.warning": "Le PDF contient des données sensibles. Il doit être remis en personne ou envoyé par un canal sécurisé.",
-  "certificateCreate.step-four.warningChOnly": "Ce certificat n'est valable qu'en Suisse.",
+  "certificateCreate.step-four.warningChOnly": "Ce certificat est seulement valable en Suisse.",
   "certificateRevoke.button": "Verrouiller le certificat",
   "certificateRevoke.instructions": "Vous pouvez verrouiller ici des certificats établis. Ils apparaîtront ensuite sur une liste verrouillée.",
   "certificateRevoke.link": "Verrouiller le certificat",
