--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -6,7 +6,7 @@
   "certificateCreate.form.label.personalData.surName": "Cognome",
   "certificateCreate.form.label.personalData.birthdate": "Data di nascita",
   "certificateCreate.form.label.personalData.certificateLanguage": "Lingua del certificato",
-  "certificateCreate.from.label.antibody": "Test per gli anticorpi Sars-CoV-2",
+  "certificateCreate.from.label.antibody": "Test anticorpi Sars-CoV-2",
   "certificateCreate.form.label.personalData.specialDate": "Formato insolito",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccino",
   "certificateCreate.form.label.vaccine.doseNumber": "Dosi ricevute",
@@ -43,7 +43,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
   "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
-  "certificateCreate.step-one.enum.antibody": "Test anticorpale (sieropositivo)",
+  "certificateCreate.step-one.enum.antibody": "Test anticorpi (sieropositiva)",
   "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
   "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">L&rsquo;emissione di certificati di vaccinazione COVID-19 o di certificati di guarigione dalla COVID-19 per le persone vaccinate o guarite all&rsquo;estero &egrave; riservata soltanto ai servizi appositamente designati dal Cantone. Vogliate confermare di aver ottenuto l&rsquo;autorizzazione del Cantone per emettere questi certificati COVID-19.</p> <p style=\"text-align: justify;\">Per i vaccini autorizzati solo conformemente all &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo;, i certificati di vaccinazione COVID-19 vengono emessi soltanto per le persone con un permesso di soggiorno valido o per i cittadini svizzeri. Questi certificati di vaccinazione sono validi solo in Svizzera.</p>",
