--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -42,7 +42,7 @@
   "certificateCreate.shipping.title": "Livraison",
   "certificateCreate.step-one.enum.vaccination": "Vaccin",
   "certificateCreate.step-one.enum.test": "Test négatif",
-  "certificateCreate.step-one.enum.recovery": "Guérison (test positif)",
+  "certificateCreate.step-one.enum.recovery": "Guérison (PCR test positif)",
   "certificateCreate.step-one.enum.antibody": "Test d'anticorps (séropositif)",
   "certificateCreate.step-two.personaldata.information": "Les données personnelles doivent être identiques au document d'identité.",
   "certificateCreate.step-two.vaccinationinformation": "la vaccination n'est complète et le certificat n'est valide que si le nombre de doses reçues correspond au nombre de doses requises. Ex : guérison + vaccination : 1/1, vaccination avec deux doses : 2/2, rappel : 3/3.",
