--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -42,7 +42,7 @@
   "certificateCreate.shipping.title": "Consegna",
   "certificateCreate.step-one.enum.vaccination": "Vaccinazione",
   "certificateCreate.step-one.enum.test": "Test negativo",
-  "certificateCreate.step-one.enum.recovery": "Guarigione (test positivo)",
+  "certificateCreate.step-one.enum.recovery": "Guarigione (PCR test positivo)",
   "certificateCreate.step-one.enum.antibody": "Test anticorpi (sieropositiva)",
   "certificateCreate.step-two.personaldata.information": "I dati personali devono essere identici al documento d'identità.",
   "certificateCreate.step-two.vaccinationinformation": "la completezza della vaccinazione e di conseguenza la validità del certificato COVID è garantita soltanto se il numero di dosi ricevute corrisponde a quello delle dosi necessarie. P. es.: guarigione + vaccinazione: 1/1, vaccinazione con 2 dosi: 2/2, richiamo 3/3.",
