VACCINECERT-1509 adjustments according to review

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -7,7 +7,7 @@
   "certificateCreate.form.label.personalData.birthdate": "Date of birth",
   "certificateCreate.form.label.personalData.specialDate": "Unusual format",
   "certificateCreate.form.label.personalData.certificateLanguage": "Language of certificate",
-  "certificateCreate.from.label.antibody": "Test for Sars-CoV-2 antibody",
+  "certificateCreate.from.label.antibody": "SARS-CoV-2 Antibody Panel, Blood",
   "certificateCreate.form.label.vaccine.medicalProduct": "Vaccine product",
   "certificateCreate.form.label.vaccine.doseNumber": "Doses received",
   "certificateCreate.form.label.vaccine.totalDoses": "Doses required",
@@ -15,11 +15,13 @@
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Country of vaccination",
   "certificateCreate.form.label.test.typeOfTest": "Test type",
   "certificateCreate.form.label.test.manufacturerAndName": "Manufacturer and Name",
-  "certificateCreate.form.label.test.sampleDate": "Date of test",
+  "certificateCreate.form.label.test.sampleDate": "Date of sampling",
   "certificateCreate.form.label.test.sampleDateTime": "Date/time of test",
   "certificateCreate.form.label.test.sampleDate.info": "This is the time at which the sample was taken.",
   "certificateCreate.form.label.test.center": "Performed by",
   "certificateCreate.form.label.test.center.info": "This is preferably the institution.",
+  "certificateCreate.form.label.test.center.number": "Permit number",
+  "certificateCreate.form.label.test.center.numberInfo": "Permit number of the testing laboratory",
   "certificateCreate.form.label.test.countryOfTest": "Country where test performed",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
   "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
@@ -43,7 +45,7 @@
   "certificateCreate.step-one.enum.vaccination": "Vaccination",
   "certificateCreate.step-one.enum.test": "Negative test",
   "certificateCreate.step-one.enum.recovery": "Recovered (PCR test positive)",
-  "certificateCreate.step-one.enum.antibody": "Antibody test (seropositive)",
+  "certificateCreate.step-one.enum.antibody": "Recovered (Antibody test positive)",
   "certificateCreate.step-two.personaldata.information": "The personal details must be identical to the identity document.",
   "certificateCreate.step-two.vaccinationinformation": "a person is only considered fully vaccinated and the associated COVID certificate is only valid if the number of doses received and the number of doses required is identical, e.g. recovery + vaccination: 1/1, vaccination with 2 doses: 2/2, booster 3/3",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">The issuing of Covid vaccination certificates or Covid recovery certificates for persons who have been vaccinated or recovered abroad is reserved only for authorised issuers specifically designated by the canton. Please confirm that you have been authorised by the canton to issue these certificates.</p><p style=\"text-align: justify;\">The issuance of vaccines that are only authorised according to the &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; is permitted only for persons with a valid residence permit or Swiss citizens. These Covid vaccination certificates are also only valid within Switzerland.</p> ",
