--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -7,7 +7,7 @@
   "certificateCreate.form.label.personalData.birthdate": "Geburtsdatum",
   "certificateCreate.form.label.personalData.specialDate": "Spezielles Format",
   "certificateCreate.form.label.personalData.certificateLanguage": "Sprache des Zertifikats",
-  "certificateCreate.from.label.antibody": "Test auf Sars-CoV-2-Antikörper",
+  "certificateCreate.from.label.antibody": "SARS-CoV-2 Antibody Panel, Blood",
   "certificateCreate.form.label.vaccine.medicalProduct": "Impfprodukt",
   "certificateCreate.form.label.vaccine.doseNumber": "Erhaltene Dosen",
   "certificateCreate.form.label.vaccine.totalDoses": "Erforderliche Dosen",
@@ -15,11 +15,13 @@
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Land der Impfung",
   "certificateCreate.form.label.test.typeOfTest": "Testyp",
   "certificateCreate.form.label.test.manufacturerAndName": "Hersteller und Name",
-  "certificateCreate.form.label.test.sampleDate": "Testdatum",
+  "certificateCreate.form.label.test.sampleDate": "Datum der Probenentnahme",
   "certificateCreate.form.label.test.sampleDateTime": "Testdatum/-zeit",
   "certificateCreate.form.label.test.sampleDate.info": "Hierbei handelt es sich, um den Zeitpunkt der Probenentnahme.",
   "certificateCreate.form.label.test.center": "Ausgeführt durch",
   "certificateCreate.form.label.test.center.info": "Hierbei handelt sich bevorzugt um die Institution.",
+  "certificateCreate.form.label.test.center.number": "Bewilligungsnummer",
+  "certificateCreate.form.label.test.center.numberInfo": "Bewilligungsnummer des testdurchführenden Laboratoriums",
   "certificateCreate.form.label.test.countryOfTest": "Land der Testdurchführung",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Datum des ersten positiven Resultats",
   "certificateCreate.form.label.recovery.countryOfTest": "Land der Testdurchführung",
@@ -43,7 +45,7 @@
   "certificateCreate.step-one.enum.vaccination": "Impfung",
   "certificateCreate.step-one.enum.test": "Negativer Test",
   "certificateCreate.step-one.enum.recovery": "Genesen (PCR-Test positiv)",
-  "certificateCreate.step-one.enum.antibody": "Antikörper-Test (seropositiv)",
+  "certificateCreate.step-one.enum.antibody": "Genesen (Antikörper-Test positiv)",
   "certificateCreate.step-two.personaldata.information": "Die Personalien müssen mit dem Ausweisdokument identisch sein.",
   "certificateCreate.step-two.vaccinationinformation": "Die Vollständigkeit der Impfung und die damit verbundene Gültigkeit des Covid-Zertifikats ist nur bei identischer Anzahl erhaltener und erforderlichen Dosen gewährleistet. Bsp.: Genesung + Impfung: 1/1, Impfung mit 2 Dosen: 2/2, Booster 3/3",
   "certificateCreate.step-two.nonissuablevaccineproductinformation": "<p style=\"text-align: justify;\">Die Ausstellung von Covid-Impfzertifikaten oder Covid-Genesenenzertifikaten f&uuml;r Personen die im Ausland geimpft oder genesen sind, ist nur speziell vom Kanton bezeichneten Stellen vorbehalten. Bitte best&auml;tigen Sie, dass Sie f&uuml;r diese Ausstellungen vom Kanton berechtigt wurden.</p><p style=\"text-align: justify;\">Die Ausstellung f&uuml;r Impfstoffe die nur gem. &laquo;<a href=\"https://www.who.int/teams/regulation-prequalification/eul\" target=\"_blank\">WHO Emergency Use Listing</a>&raquo; zugelassen sind ist nur f&uuml;r Personen mit einem g&uuml;ltigen Aufenthaltstitel oder Schweizer B&uuml;rgerInnen. Diese Covid-Impfzertifikate sind zudem nur innerhalb der Schweiz g&uuml;ltig.</p>",
