VACCINECERT-1509 label translation changes

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -20,8 +20,8 @@
   "certificateCreate.form.label.test.sampleDate.info": "This is the time at which the sample was taken.",
   "certificateCreate.form.label.test.center": "Performed by",
   "certificateCreate.form.label.test.center.info": "This is preferably the institution.",
-  "certificateCreate.form.label.test.center.number": "Permit number",
-  "certificateCreate.form.label.test.center.numberInfo": "Permit number of the testing laboratory",
+  "certificateCreate.form.label.test.center.number": "Authorisation number",
+  "certificateCreate.form.label.test.center.numberInfo": "Authorisation number of laboratory performing the test",
   "certificateCreate.form.label.test.countryOfTest": "Country where test performed",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Date of first positive result",
   "certificateCreate.form.label.recovery.countryOfTest": "Country where test performed",
