--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -20,8 +20,8 @@
   "certificateCreate.form.label.test.sampleDate.info": "Questa è l'ora in cui il campione è stato preso.",
   "certificateCreate.form.label.test.center": "Effettuato da",
   "certificateCreate.form.label.test.center.info": "Questo è preferibilmente l'istituzione.",
-  "certificateCreate.form.label.test.center.number": "Numero di aprovazione",
-  "certificateCreate.form.label.test.center.numberInfo": "Numero di aprovazione del laboratorio che esegue il test",
+  "certificateCreate.form.label.test.center.number": "Numero di autorizzazione",
+  "certificateCreate.form.label.test.center.numberInfo": "Numero di autorizzazione del laboratorio che ha effettuato il test",
   "certificateCreate.form.label.test.countryOfTest": "Paese in cui è stato effettuato il test",
   "certificateCreate.form.label.recovery.dateFirstPositiveTestResult": "Data del primo risultato positivo",
   "certificateCreate.form.label.recovery.countryOfTest": "Paese in cui è stato effettuato il test",
