Add selection to create tourist certificate

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -13,6 +13,10 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Erforderliche Dosen",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Impfdatum",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Land der Impfung",
+  "certificateCreate.form.label.vaccine.certificateSelection": "Art des Zertifikats",
+  "certificateCreate.form.label.vaccine.regularCertificate": "Regulär",
+  "certificateCreate.form.label.vaccine.touristCertificate": "Tourist",
+  "certificateCreate.form.label.vaccine.touristCertificateInfo": "Spezielles Zertifikat für Touristen. Das Zertifikat ist nur 30 Tage gültig.",
   "certificateCreate.form.label.test.typeOfTest": "Testyp",
   "certificateCreate.form.label.test.manufacturerAndName": "Hersteller und Name",
   "certificateCreate.form.label.test.sampleDate": "Datum der Probenentnahme",
