--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -13,6 +13,10 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Doses required",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Date of vaccination",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Country of vaccination",
+  "certificateCreate.form.label.vaccine.certificateSelection": "Type of Certificate",
+  "certificateCreate.form.label.vaccine.regularCertificate": "Regular",
+  "certificateCreate.form.label.vaccine.touristCertificate": "Tourist",
+  "certificateCreate.form.label.vaccine.touristCertificateInfo": "Special Certificate for Tourists. This Certificate is only valid for 30 days.",
   "certificateCreate.form.label.test.typeOfTest": "Test type",
   "certificateCreate.form.label.test.manufacturerAndName": "Manufacturer and Name",
   "certificateCreate.form.label.test.sampleDate": "Date of sampling",
