--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -13,6 +13,10 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Doses requises",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Date de la vaccination",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Pays de la vaccination",
+  "certificateCreate.form.label.vaccine.certificateSelection": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.regularCertificate": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.touristCertificate": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.touristCertificateInfo": "<PLACEHOLDER>",
   "certificateCreate.form.label.test.typeOfTest": "Type de test",
   "certificateCreate.form.label.test.manufacturerAndName": "Fabricant et Nom",
   "certificateCreate.form.label.test.sampleDate": "Date de l'échantillon",
