--- a/src/assets/i18n/it.json
+++ b/src/assets/i18n/it.json
@@ -13,6 +13,10 @@
   "certificateCreate.form.label.vaccine.totalDoses": "Dosi necessarie",
   "certificateCreate.form.label.vaccine.dateOfVaccination": "Data della vaccinazione",
   "certificateCreate.form.label.vaccine.countryOfVaccination": "Paese di vaccinazione",
+  "certificateCreate.form.label.vaccine.certificateSelection": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.regularCertificate": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.touristCertificate": "<PLACEHOLDER>",
+  "certificateCreate.form.label.vaccine.touristCertificateInfo": "<PLACEHOLDER>",
   "certificateCreate.form.label.test.typeOfTest": "Tipo di test",
   "certificateCreate.form.label.test.manufacturerAndName": "Fabbricante e Nome",
   "certificateCreate.form.label.test.sampleDate": "Data del campione",
